--- a/Actividades/foto_share_app/.gitignore
+++ b/Actividades/foto_share_app/.gitignore
@@ -42,3 +42,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Google services (e.g. APIs or Firebase)
+**/google-services.json
