--- a/Actividades/foto_share_app/pubspec.yaml
+++ b/Actividades/foto_share_app/pubspec.yaml
@@ -31,6 +31,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc:
+  equatable:
+  flutter_shimmer:
+  #Firebase
+  firebase_auth:
+  firebase_core:
+  cloud_firestore:
+  flutterfire_ui:
+  google_sign_in:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
