--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,9 @@
 [submodule "Practicas/music_app"]
     path = Practicas/music_app
     url = https://github.com/rodrigo-zamora/PDM-practica1
+[submodule "Practicas/music_app_v2"]
+    path = Practicas/music_app_v2
+    url = https://github.com/rodrigo-zamora/PDM-practica2
 [submodule "Tareas/book_repository"]
 	path = Tareas/book_repository
 	url = https://github.com/rodrigo-zamora/PDM-tarea3
